--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/stripe-v3": "^3.1.33",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.331.0",
     "next": "^14.1.0",
     "next-sanity": "^8.0.0",
