fixed topbar reduction on scroll

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "stripe": "^14.17.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
