added lottie loader

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.331.0",
     "next": "^14.1.0",
     "next-sanity": "^8.0.0",
@@ -27,6 +28,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
+    "react-top-loading-bar": "^2.3.1",
     "sanity": "^3.29.1",
     "stripe": "^14.17.0",
     "swr": "^2.2.5",
