--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-top-loading-bar": "^2.3.1",
