--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.8",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.331.0",
     "next": "^14.1.0",
