--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "framer-motion": "^11.0.8",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.331.0",
-    "next": "^14.1.0",
+    "next": "^14.1.1-canary",
     "next-sanity": "^8.0.0",
     "react": "^18",
     "react-dom": "^18",
